@@ -18,6 +18,10 @@ import java.time.ZoneId;
 import java.time.temporal.ChronoUnit;
 import java.util.*;
 import java.util.stream.Collectors;
+import java.time.LocalDate;
+import java.time.format.DateTimeFormatter;
+import java.time.LocalTime;
+import org.springframework.util.StringUtils;
 
 @Service
 @RequiredArgsConstructor
@@ -26,25 +30,31 @@ public class ReportService {
     private final ProductRepository productRepository;
     private final CategoryRepository categoryRepository;
 
-    public ReportResponse getReportData(String timeRange) {
-        Instant now = Instant.now();
-        Instant start;
+    public ReportResponse getReportData(String startDateStr, String endDateStr, String status) {
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
+        LocalDate startDate = LocalDate.parse(startDateStr, formatter);
+        LocalDate endDate = LocalDate.parse(endDateStr, formatter);
 
-        switch (timeRange.toUpperCase()) {
-            case "WEEK" -> start = now.minus(7, ChronoUnit.DAYS);
-            case "MONTH" -> start = now.minus(30, ChronoUnit.DAYS);
-            case "YEAR" -> start = now.minus(365, ChronoUnit.DAYS);
-            default -> throw new IllegalArgumentException("Invalid timeRange: " + timeRange);
+        // Convert LocalDate to Instant for database query (start of day for startDate,
+        // end of day for endDate)
+        Instant startInstant = startDate.atStartOfDay(ZoneId.systemDefault()).toInstant();
+        Instant endInstant = endDate.atTime(LocalTime.MAX).atZone(ZoneId.systemDefault()).toInstant();
+
+        List<Order> orders;
+        if (StringUtils.hasText(status)) {
+            orders = orderRepository.findByCreatedAtBetweenAndStatus(startInstant, endInstant,
+                    Order.OrderStatus.valueOf(status.toUpperCase()));
+        } else {
+            orders = orderRepository.findByCreatedAtBetween(startInstant, endInstant);
         }
-
-        List<Order> orders = orderRepository.findByCreatedAtBetween(start, now);
 
         BigDecimal totalSales = orders.stream()
                 .map(Order::getTotal)
                 .reduce(BigDecimal.ZERO, BigDecimal::add);
 
         int totalOrders = orders.size();
-        BigDecimal averageOrderValue = totalOrders == 0 ? BigDecimal.ZERO : totalSales.divide(BigDecimal.valueOf(totalOrders), 0, BigDecimal.ROUND_HALF_UP);
+        BigDecimal averageOrderValue = totalOrders == 0 ? BigDecimal.ZERO
+                : totalSales.divide(BigDecimal.valueOf(totalOrders), 0, BigDecimal.ROUND_HALF_UP);
 
         Map<Long, ReportResponse.TopProduct> productMap = new HashMap<>();
         for (Order order : orders) {
@@ -72,7 +82,8 @@ public class ReportService {
             for (OrderItem item : order.getItems()) {
                 Category cat = item.getProduct().getCategory();
                 categorySales.putIfAbsent(cat.getName(), BigDecimal.ZERO);
-                categorySales.put(cat.getName(), categorySales.get(cat.getName()).add(item.getPrice().multiply(BigDecimal.valueOf(item.getQuantity()))));
+                categorySales.put(cat.getName(), categorySales.get(cat.getName())
+                        .add(item.getPrice().multiply(BigDecimal.valueOf(item.getQuantity()))));
             }
         }
 
@@ -81,21 +92,35 @@ public class ReportService {
                 .map(e -> ReportResponse.CategorySales.builder()
                         .name(e.getKey())
                         .sales(e.getValue())
-                        .percentage(totalCatSales.compareTo(BigDecimal.ZERO) == 0 ? 0 : e.getValue().multiply(BigDecimal.valueOf(100)).divide(totalCatSales, 2, BigDecimal.ROUND_HALF_UP).doubleValue())
+                        .percentage(totalCatSales.compareTo(BigDecimal.ZERO) == 0 ? 0
+                                : e.getValue().multiply(BigDecimal.valueOf(100))
+                                .divide(totalCatSales, 2, BigDecimal.ROUND_HALF_UP).doubleValue())
                         .build())
                 .toList();
 
-        Map<String, BigDecimal> dailyMap = new TreeMap<>();
+        // Daily sales calculation for the selected range
         SimpleDateFormat sdf = new SimpleDateFormat("dd/MM");
+        Map<String, BigDecimal> dailyMap = new TreeMap<>();
+
+        // Initialize dailyMap with all days in the range to ensure all days are
+        // present, even if no sales
+        LocalDate current = startDate;
+        while (!current.isAfter(endDate)) {
+            dailyMap.put(current.format(DateTimeFormatter.ofPattern("dd/MM")), BigDecimal.ZERO);
+            current = current.plusDays(1);
+        }
+
         for (Order order : orders) {
-            String date = sdf.format(Date.from(order.getCreatedAt().atZone(ZoneId.systemDefault()).toInstant()));
-            dailyMap.putIfAbsent(date, BigDecimal.ZERO);
-            dailyMap.put(date, dailyMap.get(date).add(order.getTotal()));
+            // Use LocalDate to get just the date part of the order's creation time
+            LocalDate orderDate = order.getCreatedAt().atZone(ZoneId.systemDefault()).toLocalDate();
+            String formattedDate = orderDate.format(DateTimeFormatter.ofPattern("dd/MM"));
+            dailyMap.put(formattedDate, dailyMap.getOrDefault(formattedDate, BigDecimal.ZERO).add(order.getTotal()));
         }
 
         List<ReportResponse.DailySales> dailySales = dailyMap.entrySet().stream()
                 .map(e -> ReportResponse.DailySales.builder().date(e.getKey()).sales(e.getValue()).build())
-                .toList();
+                .collect(Collectors.toList()); // Use collect(Collectors.toList()) instead of toList() for older Java
+        // versions if needed
 
         return ReportResponse.builder()
                 .totalSales(totalSales)
